--- a/per01/src/javaee/方法.md
+++ b/per01/src/javaee/方法.md
@@ -7,5 +7,24 @@ public static 返回值类型 方法名称(参数1,参数2,...){
 }
 ```
 方法不能嵌套定义  
-方法定义好了要调用  
+方法定义好了要调用 
+1.修饰符:public static  
+2.返回值类型: return的类型  
+3.方法名称:  
+4.参数类型 进入方法的参数  
+5.参数名称 进入方法的参数名称  
+6.return ①立刻停止方法②返回一个值  
+
+##三种调用方式
+1.单独调用  
+2.打印调用  
+3.复制调用  
+
+
+##注意事项
+1.方法应该定义在类当中,不能再方法之中再定义方法   
+2.方法定义的前后顺序无所谓    
+3.如果方法有返回值 必须要写return+返回值  
+4.void函数可以写return;不能添加返回值 结束方法执行  
+ 
 
